# quant-lab

./: .env.example  .gitignore  Makefile  PLAN.md  RESULTS.md  colab_E_optuna_sweep.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: config.yaml
configs/backtest/: default.yaml
configs/data/: default.yaml  indian_market.yaml  nifty50.yaml  nifty500.yaml
configs/ensemble/: default.yaml
configs/experiment/: default.yaml  sweep.yaml
configs/features/: default.yaml
configs/model/: tft.yaml  transformer.yaml
configs/representation/: masked_ts.yaml
configs/rl/: ppo.yaml  sac.yaml
configs/walk_forward/: default.yaml
notebooks/: 01_data_exploration.ipynb  02_feature_analysis.ipynb  03_embedding_visualization.ipynb  04_model_analysis.ipynb  05_backtest_analysis.ipynb  colab_A_pretrain_transformer.ipynb  colab_B_tft_rl_ppo.ipynb  colab_C_sac_regime_backtest.ipynb  colab_D_nifty500_dl_walkforward.ipynb  colab_E_optuna_sweep.ipynb  colab_F_full_market_dl.ipynb
scripts/: compute_features.py  consolidate_results.py  detect_regimes.py  generate_report.py  ingest_data.py  optimize_ensemble.py  parse_wf_logs.py  pretrain.py  retrain_tft_small.py  run_backtest.py  run_ensemble_backtest.py  run_fullmkt_ridge_walkforward.py  run_indian_market_pipeline.py  run_pipeline.py  run_walk_forward.py  sweep_hyperparams.py  train_forecaster.py  train_rl.py
src/quant_lab/: __init__.py
tests/: conftest.py
tests/test_backtest/: test_engine.py  test_execution.py  test_lookahead.py  test_metrics.py  test_report.py  test_walk_forward.py
tests/test_data/: test_cleaning.py  test_datamodule.py  test_datasets.py  test_nse_source.py  test_sources.py  test_storage.py  test_universe.py
tests/test_features/: test_cross_asset_features.py  test_engine.py  test_feature_store.py  test_price_features.py  test_regime_features.py  test_registry.py  test_registry_extended.py
tests/test_integration/: test_end_to_end.py
tests/test_models/: test_attention.py  (+8 more)
(+100 files in other folders)
